--- a/app/src/main/res/drawable/svg_sparkles.xml
+++ b/app/src/main/res/drawable/svg_sparkles.xml
@@ -4,8 +4,23 @@
     android:width="24dp"
     android:height="24dp">
     <path
-        android:pathData="M9.813 15.904L9 18.75l-0.813 -2.846a4.5 4.5 0 0 0 -3.09 -3.09L2.25 12l2.846 -0.813a4.5 4.5 0 0 0 3.09 -3.09L9 5.25l0.813 2.846a4.5 4.5 0 0 0 3.09 3.09L15.75 12l-2.846 0.813a4.5 4.5 0 0 0 -3.09 3.09ZM18.259 8.715L18 9.75l-0.259 -1.035a3.375 3.375 0 0 0 -2.455 -2.456L14.25 6l1.036 -0.259a3.375 3.375 0 0 0 2.455 -2.456L18 2.25l0.259 1.035a3.375 3.375 0 0 0 2.456 2.456L21.75 6l-1.035 0.259a3.375 3.375 0 0 0 -2.456 2.456ZM16.894 20.567L16.5 21.75l-0.394 -1.183a2.25 2.25 0 0 0 -1.423 -1.423L13.5 18.75l1.183 -0.394a2.25 2.25 0 0 0 1.423 -1.423l0.394 -1.183 0.394 1.183a2.25 2.25 0 0 0 1.423 1.423l1.183 0.394 -1.183 0.394a2.25 2.25 0 0 0 -1.423 1.423Z"
-        android:strokeColor="#000000"
+        android:pathData="M15.2857 9.85714L13 3L10.7143 9.85714L5 12L10.7143 14.1429L13 21L15.2857 14.1429L21 12L15.2857 9.85714Z"
+        android:fillColor="#5E93D7"
+        android:strokeColor="#5E93D7"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:pathData="M5 3V7M3 5H7"
+        android:strokeColor="#5E93D7"
+        android:strokeAlpha="0.4"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:pathData="M6 17V21M4 19H8"
+        android:strokeColor="#5E93D7"
+        android:strokeAlpha="0.4"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
