--- a/app/src/main/res/drawable/svg_moon.xml
+++ b/app/src/main/res/drawable/svg_moon.xml
@@ -3,10 +3,15 @@
     android:viewportHeight="24"
     android:width="24dp"
     android:height="24dp">
-    <path
-        android:pathData="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0 -9.75 -4.365 -9.75 -9.75 0 -1.33 0.266 -2.597 0.748 -3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002 -5.998Z"
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+    <group>
+        <clip-path
+            android:pathData="M0 0H24V24H0V0Z" />
+        <path
+            android:pathData="M9.00069 19.0004C9.00069 19.8404 9.13069 20.6604 9.37069 21.4204C5.53069 20.0904 2.63068 16.5604 2.33068 12.4304C2.03068 8.04036 4.56068 3.94036 8.65068 2.22036C9.71068 1.78036 10.2507 2.10036 10.4807 2.33036C10.7007 2.55036 11.0107 3.08036 10.5707 4.09036C10.1207 5.13036 9.90068 6.23036 9.90068 7.37036C9.91069 9.41036 10.7107 11.3004 12.0107 12.7504C10.1807 14.2104 9.00069 16.4704 9.00069 19.0004Z"
+            android:fillColor="#5E93D7" />
+        <path
+            android:pathData="M21.21 17.72C19.23 20.41 16.09 21.99 12.74 21.99C12.58 21.99 12.42 21.98 12.26 21.97C11.26 21.93 10.29 21.74 9.37 21.42C9.13 20.66 9 19.84 9 19C9 16.47 10.18 14.21 12.01 12.75C13.48 14.4 15.59 15.47 17.92 15.57C18.55 15.6 19.18 15.55 19.8 15.44C20.92 15.24 21.37 15.66 21.53 15.93C21.7 16.2 21.88 16.79 21.21 17.72Z"
+            android:fillColor="#5E93D7"
+            android:fillAlpha="0.4" />
+    </group>
 </vector>
