--- a/app/src/main/res/drawable/svg_trash.xml
+++ b/app/src/main/res/drawable/svg_trash.xml
@@ -4,9 +4,15 @@
     android:width="24dp"
     android:height="24dp">
     <path
-        android:pathData="M14.74 9l-0.346 9m-4.788 0L9.26 9m9.968 -3.21c0.342 0.052 0.682 0.107 1.022 0.166m-1.022 -0.165L18.16 19.673a2.25 2.25 0 0 1 -2.244 2.077H8.084a2.25 2.25 0 0 1 -2.244 -2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0 -3.478 -0.397m-12 0.562c0.34 -0.059 0.68 -0.114 1.022 -0.165m0 0a48.11 48.11 0 0 1 3.478 -0.397m7.5 0v-0.916c0 -1.18 -0.91 -2.164 -2.09 -2.201a51.964 51.964 0 0 0 -3.32 0c-1.18 0.037 -2.09 1.022 -2.09 2.201v0.916m7.5 0a48.667 48.667 0 0 0 -7.5 0"
+        android:pathData="M21 6H15.375M15.375 6V4C15.375 2.89543 14.4796 2 13.375 2H10.625C9.52043 2 8.625 2.89543 8.625 4V6M15.375 6H8.625M3 6H8.625"
         android:strokeColor="#000000"
-        android:strokeWidth="2"
+        android:strokeWidth="1.5"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:pathData="M19 9V20C19 21 18 22 17 22H7C6 22 5 21 5 20V9"
+        android:strokeColor="#000000"
+        android:strokeWidth="1.5"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
